# PULSE-analytics

./: .gitignore  constitution.md  dev.sh  docker-compose.yml  spec.md  tasks.md
.agent/skills/: clean-arch-enforcer.md  doc-master.md  moysklad-api-rules.md
.agent/skills/clean-arch-enforcer/: SKILL.md
.agent/skills/devops-sec-pro/: SKILL.md
.agent/skills/doc-master/: SKILL.md
.agent/skills/minio-expert/: SKILL.md
.agent/skills/security-auditor-pro/: SKILL.md
.agent/skills/sequential-thinking/: SKILL.md
.agent/skills/spec-crafter/: SKILL.md
.agent/skills/sqlite-optimizer-pro/: SKILL.md
.agent/skills/tailwind-expert/: SKILL.md
.agent/skills/tdd-agent-master/: SKILL.md
.agent/skills/ui-ux-pro-max/: SKILL.md
.agent/workflows/: ci-cd-deployment.md  multi-agent-pipeline.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: admin.py  analytics.py  auth.py  business.py  dashboards.py  export.py  financial.py  inventory.py  investor.py  profitability.py  supply_chain.py  sync.py  working_capital.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py
backend/app/core/security/: jwt.py
backend/app/models/: base.py
backend/app/repositories/: base.py  sync_repo.py
backend/app/schemas/: common.py
backend/app/services/: analytics.py  financial.py  inventory.py  profitability.py  scheduler.py  sync.py  working_capital.py
backend/tests/: conftest.py  test_auth.py  test_financial.py  test_sync.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/services/: apiClient.js  financial.js
nginx/: nginx.conf
(+16 files in other folders)
